examples/scene/k8s/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: scene
  namespace: dolphin
spec:
  selector:
    matchLabels:
      app: scene
  template:
    metadata:
      labels:
        app: scene
    spec:
      containers:
      - name: scene
        image: registry.cn-hangzhou.aliyuncs.com/scene:1001
        volumeMounts:
          - name: config
            mountPath: /app/app.properties
            subPath: app.properties
        resources:
          limits:
            memory: "2Gi"
            cpu: "1000m"
          requests:
            memory: "10Mi"
            cpu: "11m"
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: registrykey
      volumes:
        - name: config
          configMap:
            name: scene
