examples/scene/k8s/statefulset.yaml
# istioctl kube-inject -f statefulset.yaml 
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: scene
  namespace: dolphin
spec:
  replicas: 2
  serviceName: scene
  selector:
    matchLabels:
      app: scene
      version: v1
  template:
    metadata:
      labels:
        app: scene
    spec:
      containers:
      - name: scene
        image: tutum/hello-world
        volumeMounts:
          - name: config
            mountPath: /app/app.properties
            subPath: app.properties
          - name: storage
            mountPath: /app/static/files
            subPath: files
        resources:
          limits:
            memory: "2Gi"
            cpu: "1000m"
          requests:
            memory: "10Mi"
            cpu: "11m"
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: registrykey
      volumes:
        - name: config
          configMap:
            name: scene
        - name: storage
          persistentVolumeClaim:
            claimName: scene
