examples/scene/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: dolphin
spec:
  ports:
  - name: 80tcp01
    port: 80
    protocol: TCP
    targetPort: 8082
  selector:
    app: demo
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
