examples/scene/k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: scene
  namespace: dolphin
spec:
  hosts:
    - "*"
  gateways:
  - scene
  http:
  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        port:
          number: 80
        host: scene
    timeout: 10s
    retries:
      attempts: 3
      perTryTimeout: 2s
